<resources>
    <string name="app_name">BroadLinkRemote</string>
    <string name="channel_1">Channel 1</string>
    <string name="channel_2">Channel 2</string>
    <string name="channel_3">Channel 3</string>
    <string name="channel_4">Channel 4</string>
    <string name="channel_5">Channel 5</string>
    <string name="image_that_will_be_used_as_a_button">Image that will be used as a button</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_mode_message">Editing mode is active. Tap a button to edit its ir codes.</string>
    <string name="tv_box_2">tv2</string>
    <string name="tv_box_1">tv1</string>
</resources>