<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="#000000">

    <ImageView
        android:id="@+id/btnChannel1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/image_that_will_be_used_as_a_button"
        android:src="@drawable/sportklub_logo"
        android:background="#AB1A1B"
        android:scaleType="fitCenter"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/btnChannel2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/channel_2"
        android:textSize="24sp"
        android:background="#FFBD33"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnChannel3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/channel_3"
        android:textSize="24sp"
        android:background="#33FF57"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnChannel4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/channel_4"
        android:textSize="24sp"
        android:background="#3399FF"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnChannel5"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/channel_5"
        android:textSize="24sp"
        android:background="#9B33FF"
        android:textColor="#FFFFFF"/>

</LinearLayout>
